# EAVL

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  LICENSE.txt  Makefile.in  README  benchmark.sh  configure  configure.ac  eavl.pro  package.sh
cmake/: ConfigureChecks.cmake  EAVLMacros.cmake  FindDiff.cmake  eavl-config.cmake.build.in  eavlConfig.h.in  runTest.cmake
config-simple/: eavlConfig.h
config-site/: Linux.conf  RSMAC.local.conf  bluewaters.conf  chester-login1.conf  chester.conf  galvatron.llnl.gov.conf  ion.ornl.gov.conf  jkress.conf  kidlogin.nics.utk.edu.conf  lens-login.ccs.ornl.gov.conf  lens.ccs.ornl.gov.conf  mac.ncsa.conf  mike.ftpn.ornl.gov.conf  monolith.conf  muon.ornl.gov.conf  newark.ftpn.ornl.gov.conf  nostril.conf  valhalla.conf  (+4 more)
src/common/: CMakeLists.txt  STL.h  eavl.h  eavlArray.cpp  eavlArray.h  eavlAtomicProperties.cpp  eavlAtomicProperties.h  eavlCUDA.cpp  eavlCUDA.h  eavlCell.h  eavlCellComponents.cpp  eavlCellComponents.h  eavlCellSet.cpp  eavlCellSet.h  eavlCellSetAllEdgesOfExplicit.h  eavlCellSetAllEdgesOfStructured.h  eavlCellSetAllFacesOfExplicit.h  eavlCellSetAllFacesOfStructured.h  eavlCellSetAllPoints.h  eavlCellSetAllQuadTree.h  eavlCellSetAllStructured.h  eavlCellSetExplicit.cpp  eavlCellSetExplicit.h  eavlCellSetSubset.h  eavlCompositor.cpp  eavlCompositor.h  eavlCoordinateValue.h  eavlCoordinates.cpp  eavlCoordinates.h  eavlDataSet.cpp  eavlDataSet.h  eavlException.h  eavlExecutor.cpp  eavlExecutor.h  eavlExplicitConnectivity.h  eavlField.h  eavlFilter.h  eavlFlatArray.cpp  eavlFlatArray.h  eavlLogicalStructure.cpp  (+14 more)
src/filters/: CMakeLists.txt  eavl2DGraphLayoutForceMutator.cpp  eavl2DGraphLayoutForceMutator.h  eavl3X3AverageMutator.cu  eavl3X3AverageMutator.h  eavlBinaryMathMutator.cu  eavlBinaryMathMutator.h  eavlBoxMutator.cpp  eavlBoxMutator.h  eavlCellToNodeRecenterMutator.cu  eavlCellToNodeRecenterMutator.h  eavlElevateMutator.cpp  eavlElevateMutator.h  eavlExternalFaceMutator.cpp  eavlExternalFaceMutator.h  eavlIsosurfaceFilter.cu  eavlIsosurfaceFilter.h  eavlPointDistanceFieldFilter.cu  eavlPointDistanceFieldFilter.h  eavlRayQueryMutator.cu  eavlRayQueryMutator.h  eavlRayTracerMutator.cu  eavlRayTracerMutator.h  eavlScalarBinFilter.cu  eavlScalarBinFilter.h  eavlSelectionMutator.cu  eavlSelectionMutator.h  eavlSimpleVRMutator.cu  eavlSimpleVRMutator.h  eavlSubsetMutator.cpp  eavlSubsetMutator.h  eavlSurfaceNormalMutator.cu  eavlSurfaceNormalMutator.h  eavlTesselate2DFilter.cpp  eavlTesselate2DFilter.h  eavlThresholdMutator.cpp  eavlThresholdMutator.h  eavlTransformMutator.cu  eavlTransformMutator.h  eavlUnaryMathMutator.cu  (+3 more)
src/filters/RT/: SplitBVH.h  eavlRTPrimitive.h  eavlRTScene.h  eavlRTUtil.h  eavlVRScene.h  objloader.h
src/filters/RT/bvh/: Platform.h  SplitBVHBuilder.h  Util.h  eavlVector3i.h
src/filters/RT/ispc/: Makefile  rt.ispc
src/importers/: ADIOSFileObject.cpp  ADIOSFileObject.h  CMakeLists.txt  eavlADIOSImporter.cpp  eavlADIOSImporter.h  eavlBOVImporter.cpp  eavlBOVImporter.h  eavlChimeraImporter.cpp  eavlChimeraImporter.h  eavlCurveImporter.cpp  eavlCurveImporter.h  eavlFileListImporter.h  eavlImporter.h  eavlImporterFactory.cpp  eavlImporterFactory.h  eavlLAMMPSDumpImporter.cpp  eavlLAMMPSDumpImporter.h  eavlMADNESSImporter.cpp  eavlMADNESSImporter.h  eavlNetCDFDecomposingImporter.cpp  eavlNetCDFDecomposingImporter.h  eavlNetCDFImporter.cpp  eavlNetCDFImporter.h  eavlPDBImporter.cpp  eavlPDBImporter.h  eavlPNGImporter.cpp  eavlPNGImporter.h  eavlPixieImporter.cpp  eavlPixieImporter.h  eavlSiloImporter.cpp  eavlSiloImporter.h  eavlVTKImporter.cpp  eavlVTKImporter.h  eavlXGCImporter.cpp  eavlXGCImporter.h  eavlXGCParticleImporter.cpp  eavlXGCParticleImporter.h
test/: .gitignore  CMakeLists.txt  Makefile.in  runtest.py  testatompipeline.cpp  testbin.cpp  testbox.cpp  testdatamodel.cpp  testdatamodel.pro  testdistancefield.cpp  testgraphlayout.cpp  testimport.cpp  testimport.pro  testiso.cpp  testmath.cpp  testnormal.cpp  testray.cpp  testrecenter.cpp  testrender.cpp  testserialize.cpp  testsort.cu  testthreshold.cpp  testvolume.cpp  testvtk.cpp  testxform.cpp  testxgc.cpp
test/baseline/testdistancefield/: four_points_1d.vtk.out  four_points_2d.vtk.out  four_points_3d.vtk.out
test/baseline/testimport/: curv_cube.vtk.out  curv_x.vtk.out  curv_xy.vtk.out  curv_xz.vtk.out  curv_y.vtk.out  curv_yz.vtk.out  curv_z.vtk.out  poly_1d_in_3d.vtk.out  poly_2d_in_3d.vtk.out  poly_sphere.vtk.out  poly_verts.vtk.out  poly_verts_and_lines.vtk.out  rect_cube.vtk.out  rect_x.vtk.out  rect_xy.vtk.out  rect_xz.vtk.out  rect_y.vtk.out  rect_yz.vtk.out  rect_z.vtk.out  ucd_1d_in_3d.vtk.out  ucd_2d_xy.vtk.out  ucd_cube.vtk.out  ucd_sphere.vtk.out  ucd_tets.vtk.out
test/baseline/testiso/: curv_cube.vtk.out  rect_cube.vtk.out  ucd_cube.vtk.out  ucd_sphere.vtk.out  ucd_tets.vtk.out
test/baseline/testnormal/: curv_cube.vtk.out  curv_xy.vtk.out  curv_xz.vtk.out  curv_yz.vtk.out  poly_2d_in_3d.vtk.out  poly_sphere.vtk.out  rect_cube.vtk.out  rect_xy.vtk.out  rect_xz.vtk.out  rect_yz.vtk.out  ucd_2d_xy.vtk.out  ucd_cube.vtk.out  ucd_sphere.vtk.out  ucd_tets.vtk.out
test/baseline/testserialize/: curv_cube.vtk.out  curv_x.vtk.out  curv_xy.vtk.out  curv_xz.vtk.out  curv_y.vtk.out  curv_yz.vtk.out  curv_z.vtk.out  curve_cube.vtk.out  poly_1d_in_3d.vtk.out  poly_2d_in_3d.vtk.out  poly_sphere.vtk.out  poly_verts.vtk.out  poly_verts_and_lines.vtk.out  rect_cube.vtk.out  rect_x.vtk.out  rect_xy.vtk.out  rect_xz.vtk.out  rect_y.vtk.out  rect_yz.vtk.out  rect_z.vtk.out  ucd_1d_in_3d.vtk.out  ucd_2d_xy.vtk.out  ucd_cube.vtk.out  ucd_sphere.vtk.out  ucd_tets.vtk.out
test/baseline/testxform/: curv_cube.vtk.out  curv_x.vtk.out  curv_xy.vtk.out  curv_xz.vtk.out  curv_y.vtk.out  curv_yz.vtk.out  curv_z.vtk.out  poly_1d_in_3d.vtk.out  poly_2d_in_3d.vtk.out  poly_sphere.vtk.out  poly_verts.vtk.out  poly_verts_and_lines.vtk.out  rect_cube.vtk.out  rect_x.vtk.out  rect_xy.vtk.out  rect_xz.vtk.out  rect_y.vtk.out  rect_yz.vtk.out  rect_z.vtk.out  ucd_1d_in_3d.vtk.out  ucd_2d_xy.vtk.out  ucd_cube.vtk.out  ucd_sphere.vtk.out  ucd_tets.vtk.out
(+212 files in other folders)
